# GGPOPLUSR

./: .gitignore  CMakeLists.txt  CONFIGURE.ps1  CONTRIBUTING.md  GGXXACPR_Win.CT  LICENSE.md  README.md  clean_table.py  default_config.vdf  ggpoplusr.sh  main_gui.py  memory_reader.py  module_enumerator.py  pid_searcher.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
cmake/: FindGGPO.cmake  FindJson.cmake  NSIS.template.in  build_datetime.cmake
resources/: detours_Makefile
resources/graphics/: Launcher.rc
resources/rc/: Launcher.rc.in  Launcher_rc_resource.h  Sidecar.rc.in  Sidecar_rc_resource.h
src/: game.h
src/game/: fiber_callbacks.cxx  game.cxx  game.h  scripting.h  syncthread.cxx  trainingmodehelper.h
src/launcher/: discovery.cxx  discovery.hxx  launcher.cxx  utils.cxx  utils.hxx
src/overlay/: overlay.cxx  overlay.h
src/sidecar/: ID3D9Wrapper.cxx  ID3D9Wrapper.h  ID3D9Wrapper_Device.cxx  ID3D9Wrapper_Device.h  sidecar.cxx  sidecar.h
src/util/: procutil.cpp  procutil.h
